export enum PriceComponentTypeEnumeration {
  Subscription,
  Installment,
  ActivationFee,
  Downpayment,
  CleaningFee,
  DistanceFee,
}
