export enum PriceTypeEnumeration {
  SalePrice,
  SRP,
  ListPrice,
  InvoicePrice,
  MinimumAdvertisedPrice,
  MSRP,
}
